Status bar, viewer counters

--- a/Ubiquitous2/web/index.html
+++ b/Ubiquitous2/web/index.html
@@ -56,11 +56,12 @@
                                         refresh();
                                     }, interval);
                                 },
+                                timeout: 3000,
                                 error: function()
                                 {
                                     setTimeout(function () {
                                         refresh();
-                                    }, interval*5);
+                                    }, interval);
                                 }
 
                             });
